/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package iamr.lab1;

/**
 *This class contains the base Agent class nd contains the basic methods 
 * that all implementations have to have
 * @author vedran
 */
public abstract class Agent {

    abstract void Init();

    abstract void Start();
}
