/*
 * To change this template, choose Tools | Templates
 * and open the template in the editor.
 */
package iamr.lab1;

/**
 *
 * @author vedran
 */
public interface Observer {
    public void Update();
    public void setSubject(Subject sub);
}
